--- a/Saucelab/Results/report.html
+++ b/Saucelab/Results/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,10097],[[4,5,6,7,[],[1,13,10083],[],[[8,0,9,[10],[1,79,10016],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,19453],[],[[5,0,6,[7,8,9],[1,217,19236],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/Users/chinmay/Desktop/Python-Robot/Robotframework1/Tests","*../Tests","*Saucelab","*/Users/chinmay/Desktop/Python-Robot/Robotframework1/Tests/saucelab.robot","*../Tests/saucelab.robot","*<p>This is the Suite for Sauce Lab automation testing.\x3c/p>","*Login Page","*<p>Login in Saucelab\x3c/p>","*1 login smoke"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Saucelab","*/Users/chinmay/Desktop/Python-Robot/Saucelab/Tests/saucelab.robot","*../Tests/saucelab.robot","*<p>This is the Suite for Sauce Lab automation testing.\x3c/p>","*Sauce lab buyout","*<p>Login in Saucelab\x3c/p>","*1","*login","*smoke"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:10","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:10","fail":0,"label":"1 login smoke","pass":1,"skip":0}],[{"elapsed":"00:00:10","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:10","fail":0,"id":"s1-s1","label":"Tests.Saucelab","name":"Saucelab","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:19","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:19","fail":0,"label":"1","pass":1,"skip":0},{"elapsed":"00:00:19","fail":0,"label":"login","pass":1,"skip":0},{"elapsed":"00:00:19","fail":0,"label":"smoke","pass":1,"skip":0}],[{"elapsed":"00:00:19","fail":0,"id":"s1","label":"Saucelab","name":"Saucelab","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1719641898273;
+window.output["baseMillis"] = 1719656958410;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 10102;
+window.output["generated"] = 19457;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
